--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-    "name": "scaffold",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "directories": {
-        "test": "test"
-    },
-    "dependencies": {
-        "chai": "^3.5.0",
-        "mocha-phantomjs": "^4.1.0"
-    },
-    "devDependencies": {
-        "chai": "^3.5.0",
-        "ghooks": "^1.3.2",
-        "istanbul": "^0.4.5",
-        "mocha": "^3.1.2",
-        "mocha-phantomjs": "^4.1.0"
-    },
-    "scripts": {
-        "test": "mocha",
-        "test:cover": "istanbul cover _mocha",
-        "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/favers/scaffold.git"
-    },
-    "config": {
-        "ghooks": {
-            "pre-commit": "npm run test:cover && npm run check-coverage"
-        }
-    },
-    "author": "favers",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/favers/scaffold/issues"
-    },
-    "homepage": "https://github.com/favers/scaffold#readme"
+  "name": "scaffold",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "chai": "^3.5.0",
+    "mocha-phantomjs": "^4.1.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "codecov.io": "^0.1.6",
+    "ghooks": "^1.3.2",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.1.2",
+    "mocha-phantomjs": "^4.1.0"
+  },
+  "scripts": {
+    "test": "mocha",
+    "test:cover": "istanbul cover _mocha",
+    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "report-coverage": "cat ./coverage/lcov.info | codecov"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/favers/scaffold.git"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run test:cover && npm run check-coverage"
+    }
+  },
+  "author": "favers",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/favers/scaffold/issues"
+  },
+  "homepage": "https://github.com/favers/scaffold#readme"
 }
